# MonkeyTyper

./: .gitignore  CMakeLists.txt  README.md
assets/: scoreboard.txt  words.txt
src/: Difficulty.h  DifficultyManager.cpp  DifficultyManager.h  FontManager.cpp  FontManager.h  GameLoop.cpp  GameLoop.h  GameStatus.h  Health.cpp  Health.h  MenuBackBtn.cpp  MenuBackBtn.h  OptionsBtn.cpp  OptionsBtn.h  OptionsManager.cpp  OptionsManager.h  PlayBtn.cpp  PlayBtn.h  ScoreManager.cpp  ScoreManager.h  Scoreboard.cpp  Scoreboard.h  ScoreboardBtn.cpp  ScoreboardBtn.h  Word.cpp  Word.h  main.cpp
